apps/listmonk/base/listmonk-preview-svc.yaml
apiVersion: v1
kind: Service
metadata:
  name: listmonk-preview
  namespace: listmonk
spec:
  selector:
    app: listmonk
  ports:
    - port: 9000
      targetPort: 9000
