apps/listmonk/base/listmonk-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: listmonk
  namespace: listmonk
spec:
  ingressClassName: nginx
  rules:
    - host: listmonk.local
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: listmonk-active
                port:
                  number: 9000
