apps/listmonk/base/networkpolicy-allow-ingress-from-listmonk.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: allow-listmonk-to-postgres
  namespace: listmonk
spec:
  podSelector:
    matchLabels:
      app: postgres
  policyTypes:
    - Ingress
  ingress:
    - from:
        - podSelector:
            matchLabels:
              app: listmonk
      ports:
        - protocol: TCP
          port: 5432
